[gd_scene load_steps=2 format=2]

[ext_resource path="res://material_maker/windows/desc_dialog/desc_dialog.gd" type="Script" id=1]

[node name="Window" type="Window"]
offset_right = 493.0
offset_bottom = 275.0
window_title = "Parameter description"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 485.0
offset_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
offset_top = 5.0
offset_right = 115.0
offset_bottom = 19.0
text = "Short Description:"

[node name="ShortDesc" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
offset_left = 119.0
offset_right = 485.0
offset_bottom = 24.0
size_flags_horizontal = 3

[node name="LongDesc" type="TextEdit" parent="VBoxContainer"]
offset_top = 30.0
offset_right = 485.0
offset_bottom = 241.0
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_enabled = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 247.0
offset_right = 485.0
offset_bottom = 267.0

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer2"]
offset_right = 304.0
offset_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.54

[node name="OK" type="Button" parent="VBoxContainer/HBoxContainer2"]
offset_left = 308.0
offset_right = 394.0
offset_bottom = 20.0
size_flags_horizontal = 3
text = "OK"

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer2"]
offset_left = 398.0
offset_right = 485.0
offset_bottom = 20.0
size_flags_horizontal = 3
text = "Cancel"

[connection signal="minimum_size_changed" from="." to="." method="_on_WindowDialog_minimum_size_changed"]
[connection signal="popup_hide" from="." to="." method="_on_WindowDialog_popup_hide"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Cancel" to="." method="_on_Cancel_pressed"]
